# systemd_mon_py

./: README.md  pyproject.toml
systemd_mon/: __init__.py  __main__.py  callback_manager.py  cli.py  dbus_manager.py  dbus_unit.py  errors.py  logger.py  monitor.py  notification.py  notification_centre.py  notifier_loader.py  state.py  state_change.py  state_value.py  unit_with_state.py
systemd_mon/formatters/: base.py  state_table_formatter.py
systemd_mon/notifiers/: base.py  email.py  slack.py
tests/: test_email_notifier.py  test_notification.py  test_notifier_loader.py  test_slack_notifier.py  test_state.py  test_state_change.py  test_state_table_formatter.py  test_state_value.py
