[project]
name = "systemd-mon-py"
version = "0.1.3"
description = "Monitor systemd units and trigger alerts for failed states"
readme = "README.md"
requires-python = ">=3.5"
dependencies = [
    "PyYAML",
]

[project.scripts]
systemd_mon = "systemd_mon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["systemd_mon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
